test/fail/tuple_immutable.zn
# ERRORS: 2

func main() {
    let t = (10, 20)
    t.0 = 100
    t.1 = 200
    0
}
